force-app/main/default/objects/Associated_Agents__c/Associated_Agents__c.object-meta.xml
<CustomObject>
    <label>Associated Agents</label>
    <nameField>
        <displayFormat>AA-{000000}</displayFormat>
        <label>Associated Agents Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Associated Agents</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>