force-app/main/default/objects/Associated_Agents__c/fields/Associated_Account__c.field-meta.xml
<CustomField>
    <fullName>Associated_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Associated Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Associated Agents (Associated Account)</relationshipLabel>
    <relationshipName>Associated_Agents2</relationshipName>
    <type>Lookup</type>
</CustomField>