force-app/main/default/objects/Associated_Agents__c/fields/Reason__c.field-meta.xml
<CustomField>
    <fullName>Reason__c</fullName>
    <inlineHelpText>Please enter valid reason for Inactive relationship.</inlineHelpText>
    <label>Reason</label>
    <type>TextArea</type>
</CustomField>