force-app/main/default/objects/Associated_Agents__c/fields/Relationship_Status__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Status__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Check this field if relationship occurs. Otherwise, uncheck this field and provide the Inactive relationship reason.</inlineHelpText>
    <label>Relationship Status</label>
    <type>Checkbox</type>
</CustomField>