force-app/main/default/objects/Associated_Agents__c/validationRules/Active_Relationship_Reason_checker.validationRule-meta.xml
<ValidationRule>
    <fullName>Active_Relationship_Reason_checker</fullName>
    <active>true</active>
    <errorConditionFormula>AND( Relationship_Status__c = true ,  Reason__c  &lt;&gt; '')</errorConditionFormula>
    <errorDisplayField>Reason__c</errorDisplayField>
    <errorMessage>Reason not required for active relationship.</errorMessage>
</ValidationRule>