force-app/main/default/objects/Associated_Agents__c/validationRules/Reason_for_Inactive_Relationship.validationRule-meta.xml
<ValidationRule>
    <fullName>Reason_for_Inactive_Relationship</fullName>
    <active>true</active>
    <errorConditionFormula>AND(Relationship_Status__c = False,  Reason__c  = '')</errorConditionFormula>
    <errorDisplayField>Reason__c</errorDisplayField>
    <errorMessage>Please provide the inactive relationship reason.</errorMessage>
</ValidationRule>